[package]
name = "aoc-2019-all"
version = "0.1.0"
authors = ["Patrick Yates <frozen.dinosaur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
ndarray = "0.13.0"
colored = "1.9.0"
num = "0.2"
ordered-float = "1.0"
regex = "1"
crossterm = "0.14"
